Add java args --add-opens to unit test methods - appears to be required for the current version of javassist to work (required for ognl) on the latest Java versions (e.g. this code now compiles with JDK16)