@@ -209,6 +209,7 @@
 						<exclude>**/TestUtils.*.java</exclude>
 						<!-- non-anonymous inner classes -->
 					</excludes>
+					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
